kubernetes/bootstrap/argocd-ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: argocd-dashboard
  namespace: kube-system
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`argocd.promotesudbury.ca`)
      kind: Rule
      services:
        - name: argocd-server
          port: 8080
