kubernetes/bootstrap/traefik-ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard
  namespace: kube-system
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`traefik.promotesudbury.ca`)
      kind: Rule
      services:
        - name: traefik
          port: 9000
